--- a/iletişim.css
+++ b/iletişim.css
@@ -15,7 +15,7 @@ body{
 .container{
     width: 85%;
     background: white;
-    border-radius: 6px;
+    border-radius: 8px;
     padding: 20px 60px 30px 40px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
 }
@@ -28,7 +28,7 @@ body{
     width: 25%;
     height: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: column;/*ikonları dikeyde hizalama*/
     align-items: center;
     justify-content: center;
     margin-top: 15px;
@@ -136,9 +136,7 @@ body{
             justify-content: center;
             flex-wrap: wrap;
         }
-        .sol::before{
-            display: none;
-        }
+
         .sag{
             width: 100%;
             margin-left: 0;
