--- a/ödev.css
+++ b/ödev.css
@@ -8,13 +8,13 @@
     outline: none; /*dış çizgi görünmesin*/
     text-decoration: none; /*linkin altındaki çizgiyi siliyor*/
     text-transform: capitalize; /*baş harflerini büyük yazıyor*/
-    transition: 0.2s ease; /*yavaş geçişi sağlıyor*/
+    transition: 0.2s ease; /* sayfa içi yavaş geçişi sağlıyor*/
 }
 :root{
-    --main-color: #a81313;
-    --black-color: #000;
+     --main-color: #a81313; 
+     --black-color: #000;
     --border: 0.1rem solid rgba(255,255,255,0.4);
-    overflow-y:scroll;
+    overflow-y:scroll; 
 
 }
 /*! base html codes*/
@@ -24,6 +24,7 @@ html{
     scroll-padding-top: 7rem; /*kaydırmada kenar boşluğu*/
     scroll-behavior: smooth; /*kaydırma efekti verir*/
 }
+
 body{
     background-color: var(--main-color);
     height: 100vh;/*ekran yüksekliği*/
@@ -45,43 +46,142 @@ section{
 .btn:hover{
    opacity: 0.7;/*saydamlığını belirler,,,hover=üstüne gelince*/
 }
-/*header başlangıç*/
-.heading{
+
+
+
+
+.navbar{
+  
+    height: 100vh;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url(arkaplan.jpg);
+  }
+  nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 5px;
+    padding-left: 10%;
+    padding-right: 10%;
+    background-color: rgba(255, 255, 255, 0.7);
+    padding-bottom: 5px;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+  }
+  /*.nav img{
+    height: 10px;
+  }
+  .logo{
     color: white;
-    text-transform: uppercase; /*hepsini büyük harf yazar*/
-    font-size: 4rem;
-    margin-bottom: 2.5rem;/*alt boşluk*/
-    border-bottom: 0.1rem solid white;/*borderın düz çizgi olmasını sağlıyor*/
-    
-}
-.header .logo img{
+    font-size: 28px;
+  }*/
+  .navbar .logo img{
     height: 10rem;
+    margin-left: -8rem;
+    margin: 0;
+    padding: 0;
+  }
+  nav ul li{
+    list-style-type:none ;
+    display: inline-block;
+    padding: 10px 20px;
+  
+  }
+  nav ul li a{
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+  }
+  nav a{
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
 }
-.header{
-    background-color: rgb(255, 255, 255);
-    display: flex; /*yan yana dizme*/
-    align-items: center; /*dikeyde hizalama*/
-    justify-content: space-between; /*öğeleri yan yana hizalama*/
+
+  nav ul button{
+    border: none;
+    background: #a81313;
+    padding: 8px 20px;
+    border-radius: 25px;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
+    transition: .5s;
+  }
+  nav ul li a:hover{
+    transition: 0.3s;
+    transform: scale(1.3);
+  }
+  button{
+    border: none;
+    background: #a81313;
+    padding: 12px 30px;
+    border-radius: 30px;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
+    transition: .4s;
+  }
+  button:hover{
+    transform: scale(1.3);
+    cursor: pointer;
+  
+  }
+
+
+
+
+
+
+
+/*header başlangıç*/
+ .heading{
+    color: rgb(0, 0, 0);
+    text-transform: uppercase; /*hepsini büyük harf yazar*/
+    font-size: 3.5rem;
+    margin-bottom: 2.5rem;/*alt boşluk*/
+    border-bottom: 0.1rem dashed rgb(0, 0, 0);/*borderın kesikli çizgi olmasını sağlıyor*/
+    
+} 
+.heading span{
+color: white;
+font-size: 2.5rem;
+
+}
+/* .header .logo img{ 
+    height: 10rem;
+    margin-left: -4rem;
+}
+
+/*.header{
+    background-color: #a81313;
+    display: flex; /*yan yana dizme
+    align-items: center; /*dikeyde hizalama
+    justify-content: space-between; /*öğeleri yan yana hizalama
     padding: 0 5%;
     margin: 2rem 20%;
-    border-radius: 3rem; /*kenarları yuvarlaklaştırma*/
+    border-radius: 3rem; /*kenarları yuvarlaklaştırma
     box-shadow: 0px 0px 20px -2px rgba(0,0,0,0.75); /*gölgelendirme*/
-    position: sticky;/*scroll düzenleme yukarı aşağı bizimle gelmesini düzenleme*/
-    top: 0;
-    /*width: 90%;*/
-    z-index: 1000; /*görünme önceliği*/
+    /* position: sticky;scroll düzenleme yukarı aşağı bizimle gelmesini düzenleme */
+    /* top: 0; */
+    /* width: 60%; */
+    /* z-index: 1000; görünme önceliği */
     
-}
-.header .navbar a{
+/* } */
+/*.header .navbar a{
     margin: 0 2rem;
     font-size: 1.6rem;
-    color: var(--black-color);
+    color: white;
     border-bottom: 0.1rem solid transparent; /*üstüne gelince menülerin altına çizgi ekleme*/
-}
-.header .navbar a:hover{
+/* } */
+/*.header .navbar a:hover{
     border-color: var(--main-color);
-    padding-bottom: 0.5rem;
-}
+    padding-bottom: 0.5rem;*/
+/* } */
 /*.header .buttons button{
     cursor: pointer;
     font-size: 2.5rem;
@@ -141,18 +241,16 @@ section{
     width: 100%;
     object-fit: cover; /*resmin en boy oranını koruyarak kutuya sığdırma*/
 }
-.menü .box-conteiner .menü-kategori{
-   font-size: 1.5rem;
-   padding-left: 1rem;
-}
 .menü .box-conteiner .box{
     font-size: 3rem;
     padding: 0rem 0;
+
  }
  .menü .box-conteiner .box h3{
     font-size: 3rem;
     padding: 1rem 0;
     padding-left: 1rem;
+    color: #a81313;
  }
  .menü .box-conteiner .box .fiyat{
     font-size: 2.5rem;
@@ -163,27 +261,28 @@ section{
     font-size: 1.5rem;
     text-decoration: line-through; /*fiyatların üstünü çizdim*/
     font-weight: 300;
+    text-decoration-color:rgb(232, 223, 223);
  }
 
  /*footer başlangıç*/
  .footer{
-    background-color: var(--black-color);
+    background-color: rgba(236, 228, 228, 0.8);
     text-align: center;
  }
- .footer .search{
+ /* .footer .search{
     display: flex;
     justify-content: center;
     padding: 1rem;
- }
-.footer .search .search-input{
+ } */
+/* .footer .search .search-input{
     width: 25rem;
     
-}
-.footer .search .btn-primary{
+} */
+/* .footer .search .btn-primary{ 
     background-color: var(--main-color);
     padding: 1rem 3rem;
     margin-left: 1rem;
-}
+} */
 .search-input{
     font-size: 1.6rem;
     color: var(--black-color);
@@ -197,15 +296,16 @@ section{
 .footer .paylas a{
     width: 5rem;
     height: 5rem;
-    line-height: 5rem;
-    color: #fff;
+    line-height: 5rem;/*satırlar arasında boyutlandırma*/
+    color: rgb(255, 255, 255);
+    background-color: #a81313;
     font-size: 2rem;
     border: var(--border);
     border-radius: 50%;
     margin: 0.3rem;
 }
 .footer .paylas a:hover{
-    background-color: var(--main-color);
+   transform: scale(1.3);
 }
 .footer .links {
     display: flex;
@@ -215,18 +315,18 @@ section{
 }
 .footer .links a {
     background-color: var(--main-color);
-    padding: 0.7rem 2rem;
+    padding: 0.5rem 4rem;
     color: #fff;
     font-size: 2rem;
     border: var(--border);
 }
 .footer .links a:hover {
-    background-color: #000;
-    opacity: 0.7;
+    background-color: rgb(0, 0, 0);/*üstüne gelince arka plan siyah oluyor*/
+    opacity: 1;/*linklere transparanlık veriyor*/
 }
 .footer .aciklama{
     font-size: 2rem;
-    color: #fff;
+    color: rgb(0, 0, 0);
     font-weight: 300;
     padding-top: 1.5rem;
 }
@@ -240,23 +340,45 @@ section{
     flex-wrap: wrap;/*tek satıra sığdırmaya çalışmıyor*/
     column-gap: 1rem;/*yazıyla resim arasındaki boşluk*/
 }
-.about .row .image{
+/* .about .row .image{
     flex: 1 1 45rem;
-}
+} */
 .about .row .img{
-    width: 100%;
+    width: 90%;
 
 }
 .about .row .content{
-    flex: 1 1 80rem;
+    flex: 1 1 80rem;/*paragraf satırlarının boyutu */
 }
-.about .row .content h3{
-    font-size: 3rem;
+.about .row .content h5{
+    font-size: 2rem;
     color: #fff;
 }
 .about .row .content p{
     font-size: 1.2rem;
     color: #ccc;
     padding: 1rem 0; /*başlıkla tarif arasındaki boşluk*/
-    line-height: 1.5;
+    line-height: 2;/*paragraf satırları arasındaki boşluk*/
+}
+.about .content a:hover{
+    transform: scale(1.3);/*imleç gelince büyüyor*/
+    cursor: pointer;/*imleç üstüne gelince el oluyo*/
+}
+.about{
+    padding-left: 4.5rem;
+}
+
+.ara-yazi{
+    min-height: 100vh;
+    display: flex;/*esneklik sağlama*/
+    background: url(./arkaplan.jpg) no-repeat;
+    background-size: cover;/*kapak*/
+    background-position: center;
+    background-attachment: fixed;
+}
+.ara-yazi h1{
+    color: #fff;
+    font-size: 10rem;
+    margin: 5rem;
+
 }
