--- a/başvuru.css
+++ b/başvuru.css
@@ -7,21 +7,22 @@ body{
     font-family:'roboto', sans-serif;
     height: 100vh;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: center;/*dikeyde hizalama*/
+    justify-content: center;/*yatayda hizalama*/
     background-color: #a81313;
+    max-height: 1000px;
 }
 .container{
     text-align: center;
     width: 400px;
     height: 520px;
     border-radius: 30px;
-    box-shadow: 5px 5px 10px rgba(1, 1, 1, .3);
+    box-shadow: 15px 15px 20px rgba(1, 1, 1, .3);
 }
 .container h1{
     margin-top: 25px;
     color: rgb(34, 34, 34,);
-    letter-spacing: 1px;
+    letter-spacing: 1px;/*harfler arası boşluk*/
     font-weight: bold;/*kalın yazı tipi*/
 }
 .container input{
@@ -31,8 +32,8 @@ body{
     width: 200px;
     height: 30px;
     margin-top: 15px;
-    padding-left: 10px;
-    margin-right: 20px;
+    padding-left: 10px;/*kutunun içindeki yazıların mesafesi*/
+    margin-right: 20px;/*kutuların sağa mesafesi*/
     font-size: 15px;
     transition: all .4s;
 }
