--- a/ödev.css
+++ b/ödev.css
@@ -15,7 +15,6 @@
      --black-color: #000;
     --border: 0.1rem solid rgba(255,255,255,0.4);
     overflow-y:scroll; 
-
 }
 /*! base html codes*/
 html{
@@ -31,7 +30,7 @@ body{
 }
 section{
     padding: 0 5%;
-    position: relative;/*bağımsız olarak konumlandırma*/
+    position: relative;/*kendine göre  konumlandırma*/
     /* left: 20px; */
 }
 .btn{
@@ -49,15 +48,14 @@ section{
 
 
 
-
 .navbar{
   
     height: 100vh;
     width: 100%;
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
-    background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url(arkaplan.jpg);
+    background-attachment: fixed;/*resmi sabitledim*/
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.1)),url(arkaplan.jpg);
   }
   nav{
     display: flex;
@@ -72,13 +70,7 @@ section{
     top: 0;
     z-index: 1000;
   }
-  /*.nav img{
-    height: 10px;
-  }
-  .logo{
-    color: white;
-    font-size: 28px;
-  }*/
+  
   .navbar .logo img{
     height: 10rem;
     margin-left: -8rem;
@@ -88,7 +80,8 @@ section{
   nav ul li{
     list-style-type:none ;
     display: inline-block;
-    padding: 10px 20px;
+    padding: 10px 30px;
+   
   
   }
   nav ul li a{
@@ -125,6 +118,7 @@ section{
     font-weight: bold;
     font-size: 15px;
     transition: .4s;
+    margin: 0 15px;
   }
   button:hover{
     transform: scale(1.3);
@@ -152,77 +146,15 @@ color: white;
 font-size: 2.5rem;
 
 }
-/* .header .logo img{ 
-    height: 10rem;
-    margin-left: -4rem;
-}
-
-/*.header{
-    background-color: #a81313;
-    display: flex; /*yan yana dizme
-    align-items: center; /*dikeyde hizalama
-    justify-content: space-between; /*öğeleri yan yana hizalama
-    padding: 0 5%;
-    margin: 2rem 20%;
-    border-radius: 3rem; /*kenarları yuvarlaklaştırma
-    box-shadow: 0px 0px 20px -2px rgba(0,0,0,0.75); /*gölgelendirme*/
-    /* position: sticky;scroll düzenleme yukarı aşağı bizimle gelmesini düzenleme */
-    /* top: 0; */
-    /* width: 60%; */
-    /* z-index: 1000; görünme önceliği */
-    
-/* } */
-/*.header .navbar a{
-    margin: 0 2rem;
-    font-size: 1.6rem;
-    color: white;
-    border-bottom: 0.1rem solid transparent; /*üstüne gelince menülerin altına çizgi ekleme*/
-/* } */
-/*.header .navbar a:hover{
-    border-color: var(--main-color);
-    padding-bottom: 0.5rem;*/
-/* } */
-/*.header .buttons button{
-    cursor: pointer;
-    font-size: 2.5rem;
-    margin: left 2rem;
-    background-color: transparent;
-} */
-
-.home{
-    min-height: 100vh;
-    display: flex;/*esneklik sağlama*/
-    background: url(./arkaplan.jpg) no-repeat;
-    background-size: cover;/*kapak*/
-    background-position: center;
-    margin-top: -16.5rem;
-   
-}
-.home .content{
-    max-width: 100rem;
-    margin-top: 350px;
-    
-    
-}
-.home .content h3{
-    font-size: 5rem;
-    color: white;
-}
-.home .content p{
-    font-size: 2rem;
-    font-weight: 300;
-    line-height: 1.8; /*satırlar aras boşluk*/
-    padding: 1rem 0;
-    color: #ccc
-}
-/*menü başlangıç*/
+ 
+ /*menü başlangıç*/
 .menü{
     top: 2.8rem;
 }
 .menü .box-conteiner{
     display: grid; /*konumlandırma*/
-    grid-template-columns: repeat(auto-fit,minmax(30rem, 1fr)); /*yan yana konumlandırma*/
-    gap: 1.5rem;/*kutular arasındaki boşluk*/
+    grid-template-columns: repeat(auto-fit,minmax(30rem, 1fr));/* yan yana konumlandırma */
+    gap: 2.5rem;/*kutular arasındaki boşluk*/
 
 }
 .menü .box-conteiner .box{
@@ -269,20 +201,7 @@ font-size: 2.5rem;
     background-color: rgba(236, 228, 228, 0.8);
     text-align: center;
  }
- /* .footer .search{
-    display: flex;
-    justify-content: center;
-    padding: 1rem;
- } */
-/* .footer .search .search-input{
-    width: 25rem;
-    
-} */
-/* .footer .search .btn-primary{ 
-    background-color: var(--main-color);
-    padding: 1rem 3rem;
-    margin-left: 1rem;
-} */
+
 .search-input{
     font-size: 1.6rem;
     color: var(--black-color);
@@ -340,19 +259,17 @@ font-size: 2.5rem;
     flex-wrap: wrap;/*tek satıra sığdırmaya çalışmıyor*/
     column-gap: 1rem;/*yazıyla resim arasındaki boşluk*/
 }
-/* .about .row .image{
-    flex: 1 1 45rem;
-} */
+
 .about .row .img{
     width: 90%;
 
 }
 .about .row .content{
-    flex: 1 1 80rem;/*paragraf satırlarının boyutu */
+    flex: 1 1 20rem;/*paragraf satırlarının boyutu */
 }
 .about .row .content h5{
     font-size: 2rem;
-    color: #fff;
+    color: rgb(26, 0, 0);
 }
 .about .row .content p{
     font-size: 1.2rem;
@@ -375,6 +292,7 @@ font-size: 2.5rem;
     background-size: cover;/*kapak*/
     background-position: center;
     background-attachment: fixed;
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.1)),url(arkaplan.jpg)
 }
 .ara-yazi h1{
     color: #fff;
